bugfix - jwt middleware
